<resources>
    <string name="app_name">Ketabuk</string>

    <string name="hello">أهلاً</string>

    <string name="intro_activity_text">
        كلنا مرضى.\n\n

كان اسم الموقع كلنا مرضى ولكن غُير لكـتــابك فيكون يسيراً على الآذان. فكرة الموقع قائمةٌ على فلسفةٍ بسيطة، مفادها: البعد عن الله مرض، وكلنا مرضى.\n\n

قلة الإيمان مرض مثله كمثل باقى الأمراض من الإنفلونزا وحتي السرطان. وأول العلاج هو الاعتراف بالمرض وتحديده. إذا وجدت نفسك هنا تقرأ هذا الكلام فالأرجح أنك تعرف أمراضك. مبروك يا صديقي، قد وضعت نفسك على أول الطريق الصحيح. ليس عيباً أن تكون مريضاً، لا حرج على من به علة في الغدة الدرقية مثلاً. إنما العيب أن تنكر المرض وتتركه يستفحل ويتوسع في جسدك. والعيب أن تعرف المرض وتمضي دون علاج متجاهلاً وجوده. لا يأتيك من يعايرك بمرضك في موقعنا هذا، أولسنا كلنا مرضى؟ ومن يفعل ذلك فإنما هم أكثر الناس مرضاً ولكن لا يشعرون.\n\n
إذا أقررت أنّا كلنا مرضى. فتعالى إلى جمعنا هذا واجلس وافتح كـتــابك. كلمنا عن جهادك مع الأمراض. وكأنها جلسة علاج من الإدمان حيث يجتمع المدمنون يحدثون بعضهم عن مشاكلهم ويشكون إلى بعضهم كيف كانوا ضعافاً اليوم واستسلموا، أو كيف كانوا أقوياء وقاوموا.\n\n

إنه لا شك أن بداية العلاج تكمن في الصلاة.\n\n

هنا تجد موقعاً لا يعرف فيه أحدٌ أحداً. أسماؤنا مستعارة. لا يحكم فيه أحدٌ على أحد. لا فضل فيه لأحد على أحد. كلنا مرضى وكلنا هنا نكتب أملاً في العلاج. إذا سجلت كان لك كتابك، تكتب فيه كيف تجاهد أمراضك يوماً بعد يوم.\n\n

- لم أصل العشاء اليوم كسلاً ولكني صليت باقى الفروض.\n
- تعصبت اليوم على أمي. تستفزني كثيراً ولكن لا يصح بأي حال أن أعاملها بهذه الطريقة.n\
- أفعل الخير دائماً وصوب عيني كلام الناس عني. أتمني لو أكف عن الرياء.n\
- قد صليت كل فروضي اليوم! ما شاء الله على. :Dn\
- اليوم الخامس من رمضان، أفطرت لرغبتي في سجارة. لعن الله السجائر.n\

اعلم أنه بينما نكتب -نحن مطوري الموقع- بالعربية فإن لك أن تكتب كيفما شئت بلهجة بلادك. فلكل مقامٍ مقال ولسنا هنا لنعلمك كيف تكتب. فاكتب كما شئت طالما كان هدفك الشفاء.\n\n

لك أن تكتب لأحدٍ في كـتـابه تشجعه. ولكن حذار أن تصدر أحكاماً. وحذار أن تمليه ما يفعل أو لا يفعل ما لم تمر بما مر به. أو مررت به ولا زلت مريضاً؛ أيصف مريضٌ لمريض علاجاً؟ قل خيراً أو اصمت.\n\n

في المكتبة يأتيك أناس يتكلمون فيما تتكلم عنه، فلا تشعر أنك وحيد، ولكي تشجعوا بعضكم البعض.\n\n

- مكنك أن تتابع كتب الناس.n\
- لا وجود للرسائل الخاصة.n\
- لا وجود للإعـجـابات (الlikes).n\
- لا وجود لأي شئ يحول الموقع إلى منصةٍ للشهرة أو لجمع المعجبين أو أي نوع من أنواع إرضاء النفس مُشتتةً عن الهدف الرئيس.\n\n

إلى مطوري المواقع: الAPI صنع بlaravel. والclient صنع بAngular2. المساعدة مطلوبة ومرحب بها. \n\n
    </string>

    <string name="github_start_here">https://github.com/ketabuk/start-here</string>

    <string name="login_messsage">
Hi, You\'re probably here to test.\n
You may login as:\n
Email: lolo@lolo.com\n
Password: 123456\n
    </string>

    <string name="login">https://api.ketabuk.com/login</string>
    <string name="register">https://api.ketabuk.com/register</string>
    <string name="journal">https://api.ketabuk.com/journal</string>
    <string name="journal_me">https://api.ketabuk.com/journal/me</string>
    <string name="empty_field_error">This field can\'t be empty!</string>
    <string name="password_match_error">Password doesn\'t match</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_str">Login</string>
    <string name="logged_successfully">Logged in successfully, Waiting for the Main Screen feature to be implemented !</string>
    <string name="registered_successfully">Registered successfully, Waiting for the Main Screen feature to be implemented !</string>
    <string name="login_error">Error while logging in!</string>
    <string name="registration_error">Error while registration!</string>
    <string name="loading">Loading .....</string>
    <string name="no_internet_error">No internet connection</string>
    <string name="register_str">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="journal_name">Journal Name</string>

</resources>
