<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ketabuk.android.activities.IntroActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_str"
            android:id="@+id/login_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_str"
            android:id="@+id/register_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/hello"
            android:textSize="@dimen/text_leading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_activity_text"
            android:textSize="@dimen/text_body" />

        <ImageButton
            android:id="@+id/github_start_here"
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/image_icon_hight"
            android:layout_gravity="right"
            android:scaleType="fitXY"
            android:src="@drawable/ketabuk_github_start_here" />

    </LinearLayout>


</ScrollView>
